Se agregaron funcionalidad del do while y switch

--- a/src/main/java/OLC1PROYECTO2/Interfaz/menu_principal.form
+++ b/src/main/java/OLC1PROYECTO2/Interfaz/menu_principal.form
@@ -18,6 +18,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Abrir Achivo"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem3">
               <Properties>
@@ -156,6 +159,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Generar &#xc1;rbol AST"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton4">
       <Properties>
